--- a/style.css
+++ b/style.css
@@ -7,14 +7,15 @@ body {
     display:flex;
     color: white;
     margin:50px 20px;
+    align-items: stretch;
 }
 .texts{
   background-color: hsl(244, 37%, 16%);
   padding: 10px;
+  
 }
 span{
-  color:  hsl(277, 64%, 61%)
-;
+  color:  hsl(277, 64%, 61%);
 }
 p{
   color: hsla(0, 0%, 100%, 0.75);
@@ -49,16 +50,15 @@ h3{
   .container{ 
    flex-direction: column-reverse;
     justify-content: center;
-    align-items: center;
   }
   .imageGradient{
-    width: 324px;
-    height: 250px;  
+    width: 300px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
+    min-height: 200px;
   }
   .texts{
-  width: 100%;
+  width: 280px;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -93,7 +93,6 @@ h3{
   }
   .imageGradient{
     width: 40%;
-    height: 260px;   
     border-top-left-radius: 0;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
